# C_Program_IMT

./: .gitignore  README  logical_operator_use.h  logical_use.c  mycode  myfirstprogram.c  printsize.c  test
E2_3/E2_3_1/: logical_result
E2_3/E2_3_2/: logical.h  main.c
TP1/: CMakeLists.txt  logical.c  main_1_myfirstprogram.c  main_2_printsize.c  main_3.1_logical_use.c  main_3.2.c  main_4.1_print_character.c  main_4.2_cur_ex.c  makefile
TP1_1/: myfirstprogram.c
TP1_2/: printsize.c
TP1_3/E2_3_1/: logical_use.c
TP1_4/E2_4_1/: print_char_Uyen.out
TP1_E2_2/: main_2.2.out  main_2.2_Uyen.out  printsize.out
TP1_E2_3/E2_3_1/: logical_use.c  logical_use.out  logical_use_Uyen.out
TP1_E2_3/E2_3_2/: logical.c  output_file_name  output_logical_Uyen.out
TP1_E2_4/E2_4_1/: print_character.c
TP1_E2_4/E2_4_2/: cur_ex.c  exchange_rate_output_Uyen.out
TP2/: CMakeLists.txt  inputfile.txt  main_Uyen_E2.1.c  main_Uyen_E2.2.c  main_Uyen_E2.3.c  main_Uyen_E2.4.c  makefile
TP2_1/: exchange.c  exchange.h  main2.1.c
TP3/: CMakeLists.txt  README  a.out  binary_to_text.c  binary_to_text.h  file1.txt  function_data  function_data_text  main_Uyen_E3.1.c  main_Uyen_E3.2.c  main_Uyen_E3.3.c  makefile  packing_NGUYEN.c  packing_NGUYEN.h
TP4/: CMakeLists.txt  README  main_Uyen_E4.c  makefile
Temp/: a.out  logical_operator_use.h  mycode.c  printsize.c
chat/: README.md  chat.c  chat.h  client.c  note  serialserver.c  server.h
